--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,15 +12,20 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": "./src"
   },
+  "typeRoots": [
+    "./types",
+    "./node_modules/@types"
+  ],
   "include": [
     "src"
-  ]
+  ],
 }
