--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
     "framer-motion": "^8.5.3",
+    "rc-pagination": "^3.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
