--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-simple-tree-menu": "^1.1.18",
+    "react-treebeard": "^3.2.4",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "rsuite": "^5.25.0",
     "sass": "^1.57.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
